--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,7 @@
 <!-- registration.html -->
+<link rel="stylesheet" href="CSS/Styles.css">
+<script src="JS/registrer.js"></script>
+
 <div ng-controller="RegistrationController">
     <form name="registrationForm" ng-submit="register(registrationForm.$valid)" novalidate>
         <!-- Nombre de usuario -->
@@ -40,7 +43,7 @@
 ----------------------------------------
 <div class="container" ng-controller="RegistrationController">
     <div class="logo">
-        <img src="path_to_your_image.png" alt="Easy Media Logo">
+        <img src="./IMAGES/easy_media_logo.png" alt="Easy Media Logo">
         <h1>Easy Media</h1>
         <p>Now, share is easy</p>
     </div>
@@ -83,7 +86,7 @@
 ----------------------------------------------
 <div class="container" ng-controller="LoginController">
     <div class="logo">
-        <img src="path_to_your_image.png" alt="Easy Media Logo">
+        <img src="./IMAGES/easy_media_logo.png" alt="Easy Media Logo">
         <h1>Easy Media</h1>
         <p>Now, share is easy</p>
     </div>
